@@ -1,3 +1,7 @@
+2005-10-09 Gautier Portet <kassoulet gmail com>
+	* added an option to apply to all queue the option choose
+	  when overwriting.
+
 2005-09-28 Gautier Portet <kassoulet gmail com>
 	* applied patch from Elias for Gentoo
 
